--- a/build.gradle
+++ b/build.gradle
@@ -1,30 +1,24 @@
+plugins {
+    id 'org.springframework.boot' version '2.0.1.RELEASE'
+    id 'java'
+    id 'war'
+}
+
 version '1.0-SNAPSHOT'
 
-apply plugin: 'idea'
-apply plugin: 'java'
-apply plugin: 'spring-boot'
-apply plugin: 'war'
+//apply plugin: 'idea'
+//apply plugin: 'war'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 ext {
-    springBootVersion = '1.2.5.RELEASE'
+    springBootVersion = '2.0.1.RELEASE'
 }
 
 repositories {
     mavenCentral()
     jcenter()
-}
-
-buildscript {
-    repositories {
-        mavenCentral()
-        jcenter()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.2.5.RELEASE")
-    }
 }
 
 war {
@@ -41,20 +35,17 @@ configurations {
 dependencies {
 
     // Spring Boot
-    compile "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
-    compile "org.springframework.boot:spring-boot-starter-jdbc:${springBootVersion}"
-    providedRuntime "org.springframework.boot:spring-boot-starter-tomcat:${springBootVersion}"
+    compile ("org.springframework.boot:spring-boot-starter-web:${springBootVersion}")
     testCompile "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
-    compile"org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}"
 
     // Test
     testCompile group: 'junit', name: 'junit', version: '4.11'
-    testCompile "net.javacrumbs.json-unit:json-unit:1.6.1"
-    testCompile "net.javacrumbs.json-unit:json-unit-fluent:1.6.1"
-    testCompile "org.assertj:assertj-core:3.1.0"
+    testCompile "net.javacrumbs.json-unit:json-unit:1.7.0"
+    testCompile "net.javacrumbs.json-unit:json-unit-fluent:1.7.0"
+    testCompile "org.assertj:assertj-core:3.9.0"
 
     // H2
-    compile "com.h2database:h2:1.4.188"
+    compile "com.h2database:h2:1.4.192"
 
     // javax.validation
     compile "javax.validation:validation-api:1.1.0.Final"
@@ -63,18 +54,12 @@ dependencies {
     // javax.inject
     compile "javax.inject:javax.inject:1"
 
-    // servlet jsp jstl
-    providedCompile "javax.servlet:javax.servlet-api:3.1.0"
-    compile "javax.servlet:jstl:1.2"
-    providedCompile "javax.servlet.jsp:jsp-api:2.2"
-    providedRuntime "org.apache.tomcat.embed:tomcat-embed-jasper"
-
     // utils
-    compile "org.projectlombok:lombok:1.16.4"
-    compile "com.google.guava:guava:18.0"
+    compile "org.projectlombok:lombok:1.16.18"
+    compile "com.google.guava:guava:23.0"
 
     // json
-    compile "com.google.code.gson:gson:2.3.1"
+    compile "com.google.code.gson:gson:2.8.1"
 
     // tuples
     compile "org.javatuples:javatuples:1.2"
